# battlegweled

./: ChangeLog  Makefile.in  README  SOURCES  aclocal.m4  autogen.sh  battlegweled.desktop  config.h.in  configure  configure.ac  makefile
data/: Makefile.am  Makefile.in  battlegweled.conf.in  battlegweled.desktop.in  battlegweled.game.in  battlegweled.sh.in  br.org.indt.battlegweled.service.in  br.org.indt.battlegweled_startup.service.in
data/pixmaps/: Makefile.am  Makefile.in
debian/: battlegweled.postinst  changelog  control  copyright  rules
rpm/: battlegweled.spec
src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  images.c  images.h  level.c  level.h  main.c  menu.h  sdl12compat.c  sdl12compat.h  socket.c  socket.h
src/launcher/: Makefile.am  Makefile.in  battlegweled.c.in
src/plugins/: Makefile.am  Makefile.in  plugin_mpcreate.c  plugin_mpjoin.c  plugin_single.c
